--- a/utilities.ipynb
+++ b/utilities.ipynb
@@ -15,10 +15,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$ git clone https://github.com/mapbox/togeojson.git\n",
-    "$ cd togeojson\n",
+    "`$ git clone https://github.com/mapbox/togeojson.git`\n",
+    "\n",
+    "`$ cd togeojson`\n",
+    "\n",
     "Install it with \n",
-    "$ sudo npm install --save togeojson."
+    "\n",
+    "`$ sudo npm install --save togeojson .`\n",
+    "\n",
+    "\n",
+    "`$ git clone https://github.com/mapbox/tokml.git`\n",
+    "\n",
+    "`$ sudo npm install -g tokml`"
    ]
   },
   {
@@ -109,6 +117,52 @@
    ],
    "source": [
     "a[\"features\"][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from geojsonio import display\n",
+    "\n",
+    "with open('001_alto-de-boqueron-san-cristobal-la-estrella.geojson') as f:\n",
+    "    contents = f.read()\n",
+    "    display(contents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "tokml 001_alto-de-boqueron-san-cristobal-la-estrella.geojson > new.kml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<?xml version=\"1.0\" encoding=\"UTF-8\"?><kml xmlns=\"http://www.opengis.net/kml/2.2\"><Document><Placemark><ExtendedData><Data name=\"name\"><value>ALTO DE BOQUERON - SAN CRISTOBAL - LA ESTRELLA</value></Data><Data name=\"styleUrl\"><value>#m10382496</value></Data><Data name=\"styleHash\"><value>-677e4ff2</value></Data><Data name=\"description\"><value>&lt;table width=&quot;400&quot; style=&quot;color:#666&quot;&gt;&lt;tr&gt;&lt;td colspan=&quot;2&quot; align=&quot;left&quot;&gt;&lt;a href=&quot;http://www.wikiloc.com&quot;&gt;&lt;img src=&quot;http://sc.wklcdn.com/wikiloc/images/wikiloc.png&quot; alt=&quot;Wikiloc&quot;&gt;&lt;/a&gt;&lt;/td&gt;&lt;/tr&gt;&lt;tr&gt;&lt;td colspan=&quot;2&quot;&gt;&lt;font style=&quot;font-size:14pt;color:#2B60DE&quot;&gt;&lt;a href=&quot;http://www.wikiloc.com/wikiloc/view.do?id=10382496&quot;&gt;ALTO DE BOQUERON - SAN CRISTOBAL - LA ESTRELLA&lt;/a&gt;&lt;/font&gt;&lt;br/&gt;near El Tambo, Departamento de Antioquia (Republic of Colombia) by &lt;a style=&quot;color:#2B60DE&quot; href=&quot;http://www.wikiloc.com/wikiloc/user.do?id=472831&quot;&gt;Oscar Upegui&lt;/a&gt;&lt;/td&gt;&lt;/tr&gt;&lt;tr&gt;&lt;td colspan=&quot;2&quot;&gt;&lt;a href=&quot;http://www.wikiloc.com/wikiloc/view.do?id=10382496&quot;&gt;&lt;img width=&quot;400&quot; src=&quot;http://sc.wklcdn.com/image_15/472831/10382496/elevProfile.png&quot; alt=&quot;Elevation Profile&quot;/&gt;&lt;/a&gt;&lt;/td&gt;&lt;/tr&gt;&lt;tr&gt;&lt;td width=&quot;40&quot;&gt;&lt;img src=&quot;http://s2.wklcdn.com/wikiloc/images/pictograms/2.png&quot; alt=&quot;&quot;/&gt;&lt;/td&gt;&lt;td align=&quot;left&quot;&gt;&lt;font style=&quot;color:black&quot;&gt;&lt;b&gt;Cycling distance:&lt;/b&gt; 19.26 mi. - 31 km.&lt;/font&gt;&lt;br/&gt;&lt;br/&gt;&lt;b&gt;Elevation min:&lt;/b&gt; 1518 meters &lt;b&gt;max:&lt;/b&gt; 2528 meters&lt;br/&gt;&lt;b&gt;Uphill:&lt;/b&gt; 389 meters &lt;b&gt;down:&lt;/b&gt; 1192 meters&lt;br/&gt;&lt;b&gt;Type: &lt;/b&gt;One way&lt;br/&gt;&lt;/td&gt;&lt;/tr&gt;&lt;tr&gt;&lt;td colspan=&quot;2&quot;&gt; &lt;/td&gt;&lt;/tr&gt;&lt;tr&gt;&lt;td align=&quot;right&quot; colspan=&quot;2&quot;&gt;&lt;br/&gt;&lt;a style=&quot;color:#2B60DE&quot;href=&quot;http://www.wikiloc.com/wikiloc/upload.do&quot;&gt;&lt;b&gt;Upload your trail to wikiloc.com &amp;rarr;&lt;/b&gt;&lt;/a&gt;&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;</value></Data></ExtendedData><Point><coordinates>-75.63559,6.164015,1718</coordinates></Point></Placemark><Placemark><ExtendedData><Data name=\"name\"><value>Path</value></Data><Data name=\"styleUrl\"><value>#lineStyle</value></Data><Data name=\"styleHash\"><value>304e7ddf</value></Data><Data name=\"description\"><value>&lt;img src=&quot;https://raw.githubusercontent.com/rescolo/ncxa/master/wikiloc.png&quot; height=&quot;30&quot; width=&quot;auto&quot; /&gt;&lt;br&gt;&lt;br&gt;&lt;a href=&quot;http://www.wikiloc.com/wikiloc/view.do?id=10382496&quot;&gt;ALTO DE BOQUERON - SAN CRISTOBAL - LA ESTRELLA&lt;/a&gt;&lt;br/&gt;&lt;a href=&quot;http://www.wikiloc.com/wikiloc/view.do?id=10382496&quot;&gt;http://www.wikiloc.com/wikiloc/view.do?id=10382496&lt;/a&gt;</value></Data></ExtendedData><LineString><coordinates>-75.660447,6.324131,2521 -75.659937,6.323278,2497 -75.660039,6.323045,2486 -75.659878,6.322968,2479 -75.659508,6.323368,2469 -75.659009,6.322806,2452 -75.658521,6.321334,2416 -75.658598,6.320993,2411 -75.658434,6.319644,2385 -75.658217,6.319054,2380 -75.6579,6.318906,2368 -75.657543,6.318295,2357 -75.657558,6.317617,2348 -75.657306,6.316582,2325 -75.657536,6.314979,2297 -75.657409,6.314278,2284 -75.656575,6.313225,2264 -75.655948,6.312859,2259 -75.656208,6.312344,2262 -75.656538,6.31102,2236 -75.656209,6.309779,2213 -75.655581,6.308862,2196 -75.655526,6.307816,2186 -75.655091,6.306746,2173 -75.655337,6.305586,2164 -75.655029,6.305166,2149 -75.65453,6.304915,2146 -75.654469,6.304722,2141 -75.654719,6.303933,2134 -75.65452,6.303155,2119 -75.654601,6.302811,2113 -75.654773,6.302686,2109 -75.654686,6.30273,2110 -75.654684,6.302449,2107 -75.654921,6.301694,2109 -75.65499,6.300849,2112 -75.654874,6.300452,2116 -75.655107,6.299938,2128 -75.654915,6.299451,2123 -75.654919,6.299006,2118 -75.653701,6.29807,2087 -75.652771,6.297724,2073 -75.652644,6.297762,2072 -75.652533,6.298178,2069 -75.6517,6.297575,2059 -75.65125,6.29704,2058 -75.650978,6.29571,2049 -75.649721,6.294259,2043 -75.648994,6.292743,2028 -75.648817,6.292683,2025 -75.648614,6.293038,2015 -75.648215,6.293201,2017 -75.64733,6.293227,2005 -75.647086,6.292523,2004 -75.647118,6.292212,2013 -75.646675,6.291813,2015 -75.647167,6.291034,2034 -75.646637,6.290244,2032 -75.646814,6.289612,2032 -75.646709,6.289088,2034 -75.646945,6.288767,2038 -75.646893,6.288138,2035 -75.646594,6.28771,2034 -75.646607,6.28698,2028 -75.646107,6.286687,2027 -75.645712,6.286862,2021 -75.644176,6.286554,2019 -75.643314,6.286725,2025 -75.64169,6.285677,2019 -75.641535,6.28538,2017 -75.640617,6.284555,2005 -75.640141,6.283287,1992 -75.640093,6.28309,1984 -75.640542,6.282287,1968 -75.640399,6.281984,1963 -75.639433,6.281709,1952 -75.639125,6.281906,1949 -75.63846,6.281733,1946 -75.637943,6.281381,1948 -75.636807,6.281122,1936 -75.636647,6.280952,1935 -75.636269,6.280174,1927 -75.636418,6.278754,1907 -75.636282,6.277818,1880 -75.63515,6.277827,1864 -75.634852,6.278104,1860 -75.633555,6.278679,1868 -75.632427,6.278404,1873 -75.632153,6.278566,1873 -75.631815,6.2791,1870 -75.631204,6.279043,1869 -75.630909,6.279663,1867 -75.630644,6.279521,1868 -75.630673,6.278762,1867 -75.630125,6.278521,1868 -75.628632,6.278637,1857 -75.628087,6.279062,1850 -75.627529,6.278774,1845 -75.626712,6.278639,1839 -75.625474,6.279502,1828 -75.624746,6.27962,1827 -75.624299,6.279241,1829 -75.623908,6.279223,1827 -75.623259,6.278812,1821 -75.6232,6.278142,1814 -75.622525,6.277532,1816 -75.622073,6.277374,1819 -75.621386,6.27746,1812 -75.620404,6.276548,1807 -75.619688,6.276456,1800 -75.618575,6.276811,1789 -75.617523,6.276877,1782 -75.617311,6.277006,1778 -75.617053,6.277494,1771 -75.616533,6.277437,1773 -75.615511,6.277768,1766 -75.614826,6.277496,1764 -75.613138,6.277428,1750 -75.612003,6.277845,1740 -75.611227,6.277861,1738 -75.609726,6.27854,1730 -75.608998,6.279438,1720 -75.608181,6.279591,1719 -75.607783,6.279478,1717 -75.607276,6.279747,1717 -75.606602,6.279699,1713 -75.605826,6.27893,1711 -75.60512,6.278796,1708 -75.604254,6.278247,1702 -75.602724,6.278598,1694 -75.601406,6.277959,1689 -75.601034,6.278131,1680 -75.601044,6.27861,1679 -75.600506,6.278981,1670 -75.600324,6.279798,1661 -75.60013,6.279909,1659 -75.599471,6.279663,1660 -75.59914,6.278519,1658 -75.598777,6.278137,1655 -75.598343,6.277276,1654 -75.595911,6.275317,1612 -75.595236,6.274952,1603 -75.59557,6.274124,1592 -75.595341,6.273461,1584 -75.593684,6.273557,1568 -75.593303,6.273269,1566 -75.593883,6.272161,1558 -75.594943,6.271094,1552 -75.595141,6.270694,1551 -75.596655,6.264046,1530 -75.597094,6.263669,1539 -75.596957,6.262947,1538 -75.598764,6.255009,1534 -75.599396,6.25404,1527 -75.600954,6.253088,1539 -75.601757,6.252331,1542 -75.601997,6.251968,1544 -75.602397,6.25071,1554 -75.602333,6.249793,1568 -75.602622,6.248095,1553 -75.602882,6.243632,1567 -75.603059,6.243236,1565 -75.60288,6.242697,1561 -75.603076,6.239747,1557 -75.603411,6.238765,1556 -75.60321,6.238321,1557 -75.603168,6.23708,1561 -75.602477,6.235897,1560 -75.602258,6.231593,1557 -75.602487,6.231134,1561 -75.602245,6.23069,1562 -75.601998,6.227262,1561 -75.600327,6.22548,1559 -75.599731,6.225041,1558 -75.599513,6.224595,1555 -75.599641,6.223234,1562 -75.599349,6.218988,1556 -75.598153,6.216878,1537 -75.598081,6.216487,1537 -75.597404,6.215383,1532 -75.594678,6.20996,1541 -75.594078,6.209097,1551 -75.593161,6.208269,1553 -75.590331,6.207963,1544 -75.589668,6.207691,1540 -75.588882,6.205366,1559 -75.588465,6.204886,1544 -75.587598,6.204301,1539 -75.587511,6.203777,1530 -75.587841,6.202995,1527 -75.588105,6.20273,1523 -75.588343,6.201708,1532 -75.589247,6.199439,1537 -75.589638,6.19885,1538 -75.590551,6.196246,1540 -75.590639,6.196068,1542 -75.590854,6.19603,1545 -75.591107,6.194998,1540 -75.591978,6.192886,1539 -75.595522,6.189114,1561 -75.597917,6.187305,1564 -75.601236,6.180722,1570 -75.601731,6.179989,1572 -75.603717,6.178403,1569 -75.603756,6.177936,1572 -75.603387,6.177462,1571 -75.603357,6.17713,1571 -75.60497,6.175073,1581 -75.60631,6.174483,1586 -75.606694,6.174166,1592 -75.608082,6.173647,1600 -75.608721,6.173208,1598 -75.609261,6.173131,1601 -75.609466,6.17289,1605 -75.60992,6.172705,1604 -75.609732,6.171944,1607 -75.609351,6.171327,1607 -75.609163,6.170321,1603 -75.614201,6.167895,1608 -75.61505,6.167692,1606 -75.616,6.167805,1605 -75.616375,6.165652,1602 -75.617932,6.165778,1617 -75.618406,6.165694,1615 -75.618712,6.165468,1624 -75.619451,6.165569,1623 -75.619822,6.164191,1621 -75.621742,6.164357,1637 -75.622116,6.163767,1630 -75.622453,6.163529,1626 -75.622812,6.163902,1649 -75.624438,6.163678,1646 -75.624909,6.163947,1652 -75.626772,6.164327,1659 -75.629273,6.16408,1667 -75.629472,6.164162,1668 -75.630643,6.163684,1673 -75.632735,6.164144,1695 -75.63297,6.164341,1697 -75.633072,6.165028,1712 -75.633649,6.165315,1706 -75.635182,6.165173,1714 -75.636201,6.164435,1720 -75.635941,6.164191,1724 -75.635182,6.164307,1716 -75.635177,6.164028,1712 -75.6356,6.163962,1715 -75.635517,6.163926,1719 -75.635808,6.164185,1732 -75.635673,6.164027,1729 -75.635696,6.164348,1723 -75.63559,6.164015,1718</coordinates></LineString></Placemark></Document></kml>"
+     ]
+    }
+   ],
+   "source": [
+    "cat new.kml"
    ]
   },
   {
